--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint",
-    "start": "node solar.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node solar.mjs"
   },
   "author": "",
   "license": "ISC",
