--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "lint": "eslint",
     "start": "node solar.mjs"
   },
-  "author": "",
+  "author": "Glen Arrowsmith",
   "license": "ISC",
   "description": "",
   "dependencies": {
